--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="searchCont">
             <img src="./images/search-svgrepo-com.svg" alt="" srcset="">  
             <input type="text" placeholder="Seach for a country" class="search" id="searchButton">
-            <button class="clearButton" aria-label="Clear search">✖</button>
+            <!-- <button class="clearButton" aria-label="Clear search">✖</button> -->
         </div>
 
         <div class="dropdownMenu">
@@ -45,18 +45,59 @@
         <div class="country">
 
             <div class="countryFlag">
-                <!-- <img src="https://flagcdn.com/af.svg" alt=""> -->
+                <img src="https://flagcdn.com/af.svg" alt="">
             </div>
 
-            <!-- <div class="countryDetails">
+            <div class="countryDetails">
                 <h5>Afghanistan</h5>
                 <p><strong>Population:</strong> 000</p>
                 <p><strong>Region:</strong> 000</p>
                 <p><strong>Capital:</strong> 000</p>
-            </div> -->
+            </div>
         </div>
         
     </div>
+
+
+    <div class="countryDescrip">
+        <!-- <button id="backIcon"> <img src="./images/back.svg" alt=""> Back</button>
+
+        <div class="flagDetails">
+            <img src="https://flagcdn.com/af.svg" alt="">
+
+            <div class="contDetails">
+                <h3 class="contDetailsHead">Afghanistan</h3>
+
+                <div class="countryInfo">
+                    <div class="infor-count">
+                        <p><strong>Native Name:</strong> 000</p>
+                        <p><strong>Population:</strong> 000</p>
+                        <p><strong>Region:</strong> 000</p>
+                        <p><strong>Sub Region:</strong> 000</p>
+                        <p><strong>Capital:</strong> 000</p>
+                    </div>
+
+                    <div class="infor-count">
+                        <p><strong>Top Level Domain:</strong> 000</p>
+                        <p><strong>Currencies:</strong> 000</p>
+                        <p><strong>Language:</strong> 000</p>
+                    </div>
+
+                   
+                </div>
+
+                <div class="border">
+                    <h5>Border Countries:</h5>
+
+                    <button>France</button>
+                    <button>Germany</button>
+                    <button>Netherlands</button>
+                </div>
+            </div> -->
+        </div>
+
+    </div>
+
 
 </body>
 </html>
